[gd_scene load_steps=12 format=3 uid="uid://dgtitbvqrjqk8"]

[ext_resource type="Script" path="res://scenes/world.gd" id="1_sdj22"]
[ext_resource type="Texture2D" uid="uid://ch0tk31kjeuig" path="res://assets/geeksneak-Sheet.png" id="2_8pqqm"]
[ext_resource type="Script" path="res://scenes/Clock.gd" id="3_d0wuv"]
[ext_resource type="Script" path="res://scenes/HHScreen.gd" id="3_g2dxa"]
[ext_resource type="PackedScene" uid="uid://xwgiekc88nw2" path="res://actors/monster.tscn" id="4_4xqe8"]
[ext_resource type="LabelSettings" uid="uid://d5eo0h06301v" path="res://src/pixel_label_settings.tres" id="5_35meq"]
[ext_resource type="FontFile" uid="uid://xs2fw1d21j10" path="res://assets/fonts/Kenney Pixel Square.ttf" id="6_fll31"]

[sub_resource type="LabelSettings" id="LabelSettings_dw8yq"]
font = ExtResource("6_fll31")
font_size = 36

[sub_resource type="Animation" id="Animation_3or7w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Handheld:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_x5xxr"]
resource_name = "game_hide"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Handheld:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 723)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xjmdd"]
_data = {
"RESET": SubResource("Animation_3or7w"),
"game_hide": SubResource("Animation_x5xxr")
}

[node name="World" type="Node2D"]
script = ExtResource("1_sdj22")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_8pqqm")
centered = false
hframes = 3
vframes = 2
metadata/_edit_lock_ = true

[node name="Clock" type="Node2D" parent="."]
script = ExtResource("3_d0wuv")

[node name="ClockSprite" type="Sprite2D" parent="Clock"]
texture = ExtResource("2_8pqqm")
centered = false
hframes = 3
vframes = 2
frame = 4

[node name="TimeDisplay" type="Label" parent="Clock"]
offset_left = 800.0
offset_top = 128.0
offset_right = 960.0
offset_bottom = 206.0
text = "00:00"
label_settings = ExtResource("5_35meq")

[node name="Ticker" type="Timer" parent="Clock"]

[node name="Handheld" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Handheld"]
texture = ExtResource("2_8pqqm")
centered = false
hframes = 3
vframes = 2
frame = 1

[node name="HHScreen" type="Node2D" parent="Handheld" node_paths=PackedStringArray("defeat_label", "win_count_label")]
script = ExtResource("3_g2dxa")
monster_scene = ExtResource("4_4xqe8")
defeat_label = NodePath("DefeatLabel/Label")
win_count_label = NodePath("WinCount")

[node name="EnemyCD" type="Timer" parent="Handheld/HHScreen"]
wait_time = 2.3
autostart = true

[node name="AttackCD" type="Timer" parent="Handheld/HHScreen"]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="Handheld/HHScreen"]
visible = false
texture = ExtResource("2_8pqqm")
centered = false
hframes = 3
vframes = 2
frame = 2

[node name="DefeatLabel" type="CenterContainer" parent="Handheld/HHScreen"]
offset_left = 219.0
offset_top = 325.0
offset_right = 768.0
offset_bottom = 768.0

[node name="Label" type="Label" parent="Handheld/HHScreen/DefeatLabel"]
visible = false
layout_mode = 2
text = "Monster 
defeated!!"
label_settings = ExtResource("5_35meq")
horizontal_alignment = 1

[node name="WinCount" type="Label" parent="Handheld/HHScreen"]
offset_left = 224.0
offset_top = 325.0
offset_right = 436.0
offset_bottom = 403.0
text = "Wins: 0"
label_settings = SubResource("LabelSettings_dw8yq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xjmdd")
}

[connection signal="time_elapsed" from="Clock" to="." method="_on_clock_time_elapsed"]
[connection signal="timeout" from="Clock/Ticker" to="Clock" method="_on_ticker_timeout"]
[connection signal="timeout" from="Handheld/HHScreen/EnemyCD" to="Handheld/HHScreen" method="_on_enemy_cd_timeout"]
